kubernetes/kube-nas/apps/flux-system/flux-instance/webhook/http-route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook-receiver
  annotations:
    external-dns/cloudflare: "true"
    external-dns/unifi: "true"
spec:
  hostnames:
    - flux-webhook-kube-nas.techtales.io
  parentRefs:
    - name: cilium
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
