kubernetes/kube-nas/apps/flux-system/flux-instance/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app flux-webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: nas-ingress.techtales.io
    external-dns/cloudflare: "true"
    external-dns/unifi: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host flux-webhook-kube-nas.techtales.io
      secretName: flux-webhook-receiver-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
